--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 font-family: Verdana, Geneva, Tahoma, sans-serif;}
 
 .submit-btn{
-    @apply   py-2 px-4 mt-8 self-center rounded-full bg-violet-950 text-orange-50
+    @apply  w-full py-3 px-6 mt-8 self-center rounded-full bg-violet-950 text-orange-50
 }
 
 .save-btn{
